# obs-multi-rtmp

./: .clang-format  .cmake-format.json  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  README.md  Readme.md  SyncEngLocale.ps1  appveyor.yml  archive-copybat.txt  archive-readme.txt  azure-pipelines.yml  build.bat  build.ps1  build_linux.sh  build_macos.sh  buildspec-win.json  buildspec.json  installer.nsi
.github/actions/build-plugin/: action.yaml  action.yml
.github/actions/package-plugin/: action.yaml  action.yml
.github/actions/run-clang-format/: action.yaml
.github/actions/run-cmake-format/: action.yaml
.github/actions/setup-macos-codesigning/: action.yaml
.github/scripts/: .Aptfile  .Brewfile  .Wingetfile  .build.zsh  .package.zsh  Build-Windows.ps1  Package-Windows.ps1  build-linux.sh  build-macos  build-ubuntu  check-cmake.sh  check-format.sh  package-linux.sh  package-macos  package-ubuntu
.github/scripts/utils.pwsh/: Install-BuildDependencies.ps1  Invoke-External.ps1  Logger.ps1  Setup-Obs.ps1
.github/scripts/utils.zsh/: check_linux  check_macos  check_packages  check_ubuntu  log_warning  read_codesign_installer  read_codesign_pass  setup_ccache  setup_linux  setup_ubuntu
.github/skills/upgrade-deps/: SKILL.md
.github/workflows/: build-project.yaml  build_ubuntu.yml  check-format.yaml  dispatch.yaml  main.yml  pr-pull.yaml  push.yaml
CI/: build-linux.sh  build-macos.sh  build-windows.ps1
CI/include/: Xcnotary  build_environment.ps1.in  build_environment.sh.in  build_support.sh  build_support_linux.sh  build_support_macos.sh  build_support_windows.ps1
CI/linux/: 01_install_dependencies.sh  02_build_obs_libs.sh  03_build_plugin.sh  04_package_plugin.sh  build-xenial.sh  install-dependencies-xenial.sh  package-xenial.sh
CI/macos/: 01_install_dependencies.sh  02_build_obs_libs.sh  03_build_plugin.sh  04_package_plugin.sh  build-macos.sh  install-dependencies-macos.sh  package-macos.sh  qt.rb
CI/utility/: check-format.sh
CI/win/: install-build-obs.cmd
CI/windows/: 01_install_dependencies.ps1  02_build_obs_libs.ps1  03_build_plugin.ps1  04_package_plugin.ps1
build-aux/: .run-format.zsh
bundle/: installer-macOS.pkgproj.in
ci/: ci_includes.cmd.in  install.ps1  install.sh  install_macos.sh  install_ubuntu.sh
ci-back/: ci_includes.sh.in
ci-back/macos/: package-macos.sh
ci-back/windows/: package-windows.cmd  prepare-windows.cmd
ci/linux/: package-ubuntu.sh
ci/macos/: build-macos.sh  install-build-obs-macos.sh  install-dependencies-macos.sh  package-macos.sh
ci/windows/: package-windows.cmd  prepare-obs-windows.cmd  prepare-windows.cmd
cmake/: ObsPluginHelpers.cmake
cmake/bundle/windows/: installer-Windows.iss.in  resource.rc.in
cmake/common/: bootstrap.cmake  buildnumber.cmake  buildspec_common.cmake  compiler_common.cmake  helpers_common.cmake  osconfig.cmake
cmake/linux/: compilerconfig.cmake  defaults.cmake  helpers.cmake
cmake/linux/toolchains/: aarch64-linux-clang.cmake  aarch64-linux-gcc.cmake  x86_64-linux-clang.cmake  x86_64-linux-gcc.cmake
cmake/macos/: buildspec.cmake  compilerconfig.cmake  defaults.cmake  helpers.cmake  xcode.cmake
cmake/macos/resources/: ccache-launcher-c.in  ccache-launcher-cxx.in  create-package.cmake.in  distribution.in  installer-macos.pkgproj.in
cmake/windows/: buildspec.cmake  compilerconfig.cmake  defaults.cmake  helpers.cmake
data/locale/: an-ES.ini  ar-AR.ini  ar-SA.ini  az-AZ.ini  ba-RU.ini  be-BY.ini  bem-ZM.ini  bg-BG.ini  bn-BD.ini  ca-ES.ini  cs-CZ.ini  da-DK.ini  de-DE.ini  el-GR.ini  en-GB.ini  en-US.ini  eo-UY.ini  es-ES.ini  et-EE.ini  eu-ES.ini  fa-IR.ini  fi-FI.ini  fil-PH.ini  fr-FR.ini  gd-GB.ini  gl-ES.ini  he-IL.ini  hi-IN.ini  hr-HR.ini  hu-HU.ini  hy-AM.ini  id-ID.ini  it-IT.ini  ja-JP.ini  ka-GE.ini  kab-KAB.ini  kmr-TR.ini  ko-KR.ini  lo-LA.ini  lt-LT.ini  (+31 more)
docs/: Readme.md
githubci/: build.bat  build.ps1
installer/: installer-Windows.iss  installer-Windows.iss.in  installer-macOS.pkgproj.in
installer_script/: installer.nsi  obs-multi-rtmp.pkgproj.in
locale/: ar-AR.ini  ca-ES.ini  de-DE.ini  en-US.ini  es-ES.ini  fr-FR.ini  id-ID.ini  ja-JP.ini  ko-KR.ini  nl-NL.ini  pl-PL.ini  pt-BR.ini  pt-PT.ini  ru-RU.ini  ua-UA.ini  uk-UA.ini  vi-VN.ini  zh-CN.ini  zh-TW.ini
src/: edit-widget.cpp  edit-widget.h  helpers.cpp  helpers.h  json-util.hpp  obs-multi-rtmp.cpp  obs-multi-rtmp.h  obs-multi-rtmp.pkgproj.in  obs-properties-widget.cpp  obs-properties-widget.h  output-config-legacy.cpp  output-config.cpp  output-config.h  pch.h  plugin-macros.h  plugin-macros.h.in  plugin-main.c  plugin-support.c.in  protocols.cpp  protocols.h  push-widget.cpp  push-widget.h  version.rc.in
